--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.23.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-geocode": "^0.2.1",
