--- a/client/.env.dev
+++ b/client/.env.dev
@@ -1,2 +1,2 @@
-REACT_APP_URL=http://localhost:5000/api
+REACT_APP_URL=https://ih-woofcollab.herokuapp.com/
 REACT_APP_GOOGLE_KEY=AIzaSyBdergxMgHic2LH7s_ou7nmShy6smGNnPY
