--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
