--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "start-no-env": "react-scripts start",
     "start": "dotenv -e .env.dev react-scripts start",
     "build-dev": "dotenv -e .env.dev react-scripts build",
     "build-prod": "dotenv -e .env.prod react-scripts build",
